--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -29,7 +29,7 @@
                 </a>
             </div>
             <div class="menu-items">
-                <div class="item"><a href="#"><span>Osirix</span></a></div>
+                <div class="item"><a href="#"><span>LOREM</span></a></div>
                 <div class="item"><a href="#"><span>Support</span></a></div>
                 <div class="item"><a href="#"><span>Resources</span></a></div>
                 <div class="item"><a href="#"><span>About</span></a></div>
@@ -39,7 +39,7 @@
     <div class="main-site">
         <div class="introduction">
             <div class="brand-title">
-                <div class="title">ORISIX DICOM Viewer</div>
+                <div class="title">LOREM IPSUM DOLOR</div>
                 <div class="description">The world famous medical images viewer</div>
                 <img class="brand-devices" src="/asset/devices.png" alt="devices">
             </div>
@@ -81,7 +81,7 @@
                     <img src="/asset/logo.svg" alt="logo">
                 </div>
                 <div class="brand">
-                    <div class="title">ORISIX</div>
+                    <div class="title">LOREM</div>
                     <div class="description">WEB DICOM viewer</div>
                 </div>
             </div>
