update: add range slider for each dimension

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -96,11 +96,22 @@
             <div class="render-container">
                 <div class="files-bar">
                 </div>
-                <div id="3d" class="three-dimemsion"></div>
+                <div id="3d" class="three-dimemsion">
+                    <div class="title">3D</div>
+                </div>
                 <div class="two-dimemsion-container">
-                    <div id="sliceX" class="two-dimemsion"></div>
-                    <div id="sliceY" class="two-dimemsion"></div>
-                    <div id="sliceZ" class="two-dimemsion"></div>
+                    <div id="sliceX" class="two-dimemsion">
+                        <input type="range" max="100" min="0" class="z-change">
+                        <div class="title">Z-axis</div>
+                    </div>
+                    <div id="sliceY" class="two-dimemsion">
+                        <input type="range" max="100" min="0" class="y-change">
+                        <div class="title">Y-axis</div>
+                    </div>
+                    <div id="sliceZ" class="two-dimemsion">
+                        <input type="range" max="100" min="0" class="x-change">
+                        <div class="title">X-axis</div>
+                    </div>
                 </div>
             </div>
         </div>
