--- a/src/helpers/css/style.css
+++ b/src/helpers/css/style.css
@@ -360,8 +360,8 @@ img.brand-devices {
 }
 
 .files-bar::-webkit-scrollbar {
-    width: 12px;
-    background-color: #F5F5F5;
+    width: 8px;
+    background-color: transparent;
 }
 
 .files-bar::-webkit-scrollbar-thumb {
@@ -459,7 +459,7 @@ input[type=range]::-webkit-slider-runnable-track {
     cursor: pointer;
     animate: 0.2s;
     box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-    background: #ac51b5;
+    background: #f7f9fc;
     border-radius: 30px;
     border: 0px solid #000101;
 }
@@ -470,46 +470,47 @@ input[type=range]::-webkit-slider-thumb {
     height: 15px;
     width: 30px;
     border-radius: 7px;
-    background: #65001c;
+    background: #a4a6a8;
     cursor: pointer;
     -webkit-appearance: none;
     margin-top: -3.6px;
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #ac51b5;
+    background: #f7f9fc;
 }
 
 input[type=range]::-moz-range-track {
     width: 100%;
-    height: 12.8px;
+    height: 8px;
     cursor: pointer;
     animate: 0.2s;
     box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-    background: #ac51b5;
-    border-radius: 25px;
+    background: #f7f9fc;
+    border-radius: 30px;
     border: 0px solid #000101;
 }
 
 input[type=range]::-moz-range-thumb {
-    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+    box-shadow: 0px 0px 0px #0e0d0d, 0px 0px 0px #0d0d0d;
     border: 0px solid #000000;
-    height: 20px;
-    width: 39px;
+    height: 15px;
+    width: 30px;
     border-radius: 7px;
-    background: #65001c;
+    background: #a4a6a8;
     cursor: pointer;
+    margin-top: -3.6px;
 }
 
 input[type=range]::-ms-track {
     width: 100%;
-    height: 12.8px;
+    height: 8px;
     cursor: pointer;
     animate: 0.2s;
-    background: transparent;
-    border-color: transparent;
-    border-width: 39px 0;
-    color: transparent;
+    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+    background: #f7f9fc;
+    border-radius: 30px;
+    border: 0px solid #000101;
 }
 
 input[type=range]::-ms-fill-lower {
@@ -527,19 +528,20 @@ input[type=range]::-ms-fill-upper {
 }
 
 input[type=range]::-ms-thumb {
-    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+    box-shadow: 0px 0px 0px #0e0d0d, 0px 0px 0px #0d0d0d;
     border: 0px solid #000000;
-    height: 20px;
-    width: 39px;
+    height: 15px;
+    width: 30px;
     border-radius: 7px;
-    background: #65001c;
+    background: #a4a6a8;
     cursor: pointer;
+    margin-top: -3.6px;
 }
 
 input[type=range]:focus::-ms-fill-lower {
-    background: #ac51b5;
+    background: #f7f9fc;
 }
 
 input[type=range]:focus::-ms-fill-upper {
-    background: #ac51b5;
+    background: #f7f9fc;
 }
