finish texture-based volume rendering

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -74,7 +74,7 @@
             </div>
         </div>
     </div>
-    <div class="viewer close">
+    <div class="viewer" style="transform:scale(0);">
         <div class="viewer-container">
             <div class="interact-container">
                 <div class="logo">
@@ -102,7 +102,7 @@
                 <div class="two-dimemsion-container">
                     <div id="sliceX" class="two-dimemsion">
                         <input type="range" max="100" min="0" class="z-change">
-                        <div class="title">Z-axis</div>
+                        <div class="title">X-axis</div>
                     </div>
                     <div id="sliceY" class="two-dimemsion">
                         <input type="range" max="100" min="0" class="y-change">
@@ -110,7 +110,7 @@
                     </div>
                     <div id="sliceZ" class="two-dimemsion">
                         <input type="range" max="100" min="0" class="x-change">
-                        <div class="title">X-axis</div>
+                        <div class="title">Z-axis</div>
                     </div>
                 </div>
             </div>
