--- a/src/helpers/css/style.css
+++ b/src/helpers/css/style.css
@@ -93,6 +93,315 @@ body {
 
 /* Main Site */
 
+.upload-overlay {
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 50;
+    background-color: rgba(22, 22, 22, .8);
+}
+
+.upload-overlay.block {
+    display: block;
+}
+
+@keyframes upload-entrance {
+    0% {
+        top: 85%;
+        opacity: 0;
+        width: 50px;
+        height: 50px;
+        border-radius: 100%;
+    }
+    20% {
+        opacity: .5;
+    }
+    30% {
+        top: 50%;
+        opacity: 1;
+        width: 50px;
+        height: 50px;
+    }
+    40% {
+        width: 40px;
+        height: 40px;
+        border-radius: 100%;
+    }
+    70% {
+        border-radius: 10%;
+        box-shadow: none;
+    }
+    100% {
+        width: 650px;
+        height: 530px;
+        border-radius: 0;
+        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    }
+}
+
+@keyframes upload-exit {
+    0% {
+        width: 650px;
+        height: 530px;
+        border-radius: 0;
+        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    }
+    20% {
+        border-radius: 10%;
+        box-shadow: none;
+    }
+    30% {
+        width: 40px;
+        height: 40px;
+        border-radius: 100%;
+    }
+    40% {
+        top: 50%;
+        opacity: 1;
+        width: 50px;
+        height: 50px;
+    }
+    70% {
+        opacity: .5;
+    }
+    100% {
+        top: 85%;
+        opacity: 0;
+        width: 50px;
+        height: 50px;
+        border-radius: 100%;
+    }
+}
+
+.upload-area {
+    display: none;
+    width: 650px;
+    height: 530px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 51;
+    overflow-y: hidden;
+    background-color: #fcfcfc;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.upload-area.animation {
+    animation-name: upload-entrance;
+    animation-duration: .8s;
+    animation-direction: normal;
+}
+
+.upload-area.reversing {
+    display: none;
+    animation-name: upload-exit;
+    animation-duration: .8s;
+    animation-direction: normal;
+}
+
+.upload-area.block {
+    display: block;
+}
+
+.files-container {
+    display: none;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.files-container.block {
+    display: block;
+}
+
+.files-container.animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+}
+
+.handle-buttons {
+    display: flex;
+    justify-content: space-between;
+    width: 95%;
+    margin: 0 auto;
+    padding: 25px 0 0;
+}
+
+.choose-files {
+    width: 45%;
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    text-align: center;
+    border: 2px solid #374a61;
+    padding: 13px 0;
+    text-transform: uppercase;
+    margin-left: 10px;
+    color: #FFFFFF;
+    background-color: #374a61;
+    transition: all 0.25s ease;
+    user-select: none;
+    cursor: pointer;
+    opacity: 1;
+}
+
+.choose-files:hover {
+    opacity: .85;
+}
+
+.algorithm-choices {
+    width: 45%;
+    margin-right: 10px;
+}
+
+.algorithm-select {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    font-size: 20px;
+    font-weight: 600;
+    border: 2px solid #374a61;
+    text-transform: uppercase;
+    padding-left: 6px;
+    outline: none;
+    color: #374a61;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-image: url('/asset/angle-arrow-down.svg');
+    background-size: 25px;
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.files-list {
+    width: 100%;
+}
+
+.files-table {
+    text-align: left;
+    line-height: 40px;
+    border-collapse: separate;
+    border-spacing: 0;
+    border: 2px solid #1ECD97;
+    width: 92%;
+    margin: 30px auto;
+    border-radius: .25rem;
+    overflow-y: scroll;
+}
+
+.files-table tbody {
+    display: block;
+    height: 260px;
+    overflow-y: scroll;
+}
+
+.files-table thead,
+tbody tr {
+    display: table;
+    width: 100%;
+    table-layout: fixed;
+}
+
+.files-table thead tr:first-child {
+    background: #1ECD97;
+    color: #fff;
+    border: none;
+}
+
+.files-table th:first-child,
+.files-table td:first-child {
+    padding: 0 15px 0 20px;
+}
+
+.files-table th {
+    font-weight: 500;
+}
+
+.files-table thead tr:last-child th {
+    border-bottom: 3px solid #ddd;
+}
+
+.files-table tbody tr:hover {
+    background-color: #f2f2f2;
+    cursor: default;
+}
+
+.files-table tbody tr:last-child td {
+    border: none;
+}
+
+.files-table tbody td {
+    border-bottom: 1px solid #ddd;
+}
+
+.files-table td:last-child {
+    text-align: center;
+    font-weight: 500;
+}
+
+.files-table tbody::-webkit-scrollbar-track {
+    border-radius: 0px;
+    background-color: #F5F5F5;
+}
+
+.files-table tbody::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+.files-table tbody::-webkit-scrollbar-thumb {
+    border-radius: 0px;
+    background-color: #555;
+}
+
+.upload-title {
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    margin: 0 auto;
+    height: 70px;
+    color: #232222;
+    font-size: 15px;
+    font-weight: 500;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+}
+
+.upload-cancel {
+    border-radius: 40px;
+    background-color: #cecece;
+    padding: 10px 30px;
+    outline: none;
+    letter-spacing: 1px;
+    cursor: pointer;
+    transition: all 0.25s ease;
+    border: 2px solid #cecece;
+    color: #FFFFFF;
+    margin-right: 15px;
+}
+
+.upload-execute {
+    border-radius: 40px;
+    background-color: #ffffff;
+    padding: 10px 30px;
+    outline: none;
+    letter-spacing: 1px;
+    cursor: pointer;
+    transition: all 0.25s ease;
+    border: 2px solid #1ECD97;
+    color: #1ECD97;
+}
+
+.upload-execute:hover {
+    color: #ffffff;
+    background-color: #1ECD97;
+}
+
 .slider-container {
     width: 50%;
     height: 100vh;
@@ -144,10 +453,28 @@ body {
     color: #ffffff;
     text-transform: uppercase;
     text-align: center;
+    user-select: none;
 }
 
 #file_inp {
     display: none;
+}
+
+.wrong-noti {
+    display: none;
+    width: fit-content;
+    position: absolute;
+    left: 49%;
+    top: 58%;
+    transform: translate(-50%, -50%);
+    font-size: 21px;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+    color: #ea355d;
+}
+
+.wrong-noti.block {
+    display: block;
 }
 
 .slider-overlay {
@@ -256,16 +583,11 @@ img.brand-devices {
     left: 0;
     right: 0;
     bottom: 0;
-    /* background-color: #292c30; */
     background: #9e9e9e;
     background: -webkit-linear-gradient(#9e9e9e, #607d8b);
-    /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(#9e9e9e, #607d8b);
-    /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(#9e9e9e, #607d8b);
-    /* For Firefox 3.6 to 15 */
     background: linear-gradient(#9e9e9e, #607d8b);
-    /* Standard syntax */
     z-index: 100;
 }
 
