add 2D rendering for ray casting (needs serious fix)

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="/js/dicomParser.min.js"></script>
     <script type="text/javascript" src="/js/jpx.min.js"></script>
     <script type="text/javascript" src="/js/raycasting.js"></script>
+    <script type="text/javascript" src="/js/ray2D.js"></script>
     <title>DiRea - Medical Tool</title>
 </head>
 
