--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -124,7 +124,7 @@
             </div>
         </div>
     </div>
-    <div class="viewer" style="transform:scale(0);">
+    <div class="viewer" style="transform:scale(1);">
         <div class="viewer-container">
             <div class="interact-container">
                 <div class="logo">
@@ -166,9 +166,9 @@
                                     <div class="title">
                                         <i class="material-icons">brightness_medium</i>
                                         <span class="name">Representation</span>
-                                        <i class="material-icons drop-down">keyboard_arrow_down</i>
+                                        <i class="material-icons drop-down">keyboard_arrow_up</i>
                                     </div>
-                                    <div class="config">
+                                    <div class="config opened">
                                         <div class="attribute-title">
                                             Shadow & Edge
                                         </div>
@@ -192,62 +192,67 @@
                                     <div class="title">
                                         <i class="material-icons">color_lens</i>
                                         <span class="name">Colors</span>
-                                        <i class="material-icons drop-down">keyboard_arrow_down</i>
+                                        <i class="material-icons drop-down">keyboard_arrow_up</i>
                                     </div>
                                 </div>
                                 <div class="slices setting">
                                     <div class="title">
                                         <i class="material-icons">tune</i>
                                         <span class="name">Slices</span>
-                                        <i class="material-icons drop-down">keyboard_arrow_down</i>
+                                        <i class="material-icons drop-down">keyboard_arrow_up</i>
                                     </div>
-                                    <div class="attribute-title">
-                                        Window/Level
-                                    </div>
-                                    <div class="attribute-config">
-                                        <div class="attribute">Window</div>
-                                        <input type="range" min="0" max="100" step="1" value="0">
-                                        <div class="value">0</div>
-                                    </div>
-                                    <div class="attribute-config">
-                                        <div class="attribute">Level</div>
-                                        <input type="range" min="0" max="100" step="1" value="0">
-                                        <div class="value">0</div>
-                                    </div>
-                                    <div class="attribute-title">
-                                        Slices
-                                    </div>
-                                    <div class="attribute-config">
-                                        <div class="attribute circle">
-                                            <div>X</div>
+                                    <div class="config opened">
+                                        <div class="attribute-title">
+                                            Window/Level
                                         </div>
-                                        <input class="slice-change index-x" type="range" min="0" max="100" step="1" value="0">
-                                        <div class="value">0</div>
-                                    </div>
-                                    <div class="attribute-config">
-                                        <div class="attribute circle">
-                                            <div>Y</div>
+                                        <div class="attribute-config">
+                                            <div class="attribute">Window</div>
+                                            <input type="range" min="0" max="100" step="1" value="0">
+                                            <div class="value">0</div>
                                         </div>
-                                        <input class="slice-change index-y" type="range" min="0" max="100" step="1" value="0">
-                                        <div class="value">0</div>
-                                    </div>
-                                    <div class="attribute-config">
-                                        <div class="attribute circle">
-                                            <div>Z</div>
+                                        <div class="attribute-config">
+                                            <div class="attribute">Level</div>
+                                            <input type="range" min="0" max="100" step="1" value="0">
+                                            <div class="value">0</div>
                                         </div>
-                                        <input class="slice-change index-z" type="range" min="0" max="100" step="1" value="0">
-                                        <div class="value">0</div>
+                                        <div class="attribute-title">
+                                            Slices
+                                        </div>
+                                        <div class="attribute-config">
+                                            <div class="attribute circle">
+                                                <div>X</div>
+                                            </div>
+                                            <input class="slice-change index-x" type="range" min="0" max="100" step="1" value="0">
+                                            <div class="value">0</div>
+                                        </div>
+                                        <div class="attribute-config">
+                                            <div class="attribute circle">
+                                                <div>Y</div>
+                                            </div>
+                                            <input class="slice-change index-y" type="range" min="0" max="100" step="1" value="0">
+                                            <div class="value">0</div>
+                                        </div>
+                                        <div class="attribute-config">
+                                            <div class="attribute circle">
+                                                <div>Z</div>
+                                            </div>
+                                            <input class="slice-change index-z" type="range" min="0" max="100" step="1" value="0">
+                                            <div class="value">0</div>
+                                        </div>
                                     </div>
+
                                 </div>
                                 <div class="render-info setting">
                                     <div class="title">
                                         <i class="material-icons">info</i>
                                         <span class="name">Information</span>
-                                        <i class="material-icons drop-down">keyboard_arrow_down</i>
+                                        <!-- <i class="material-icons drop-down">keyboard_arrow_up</i> -->
                                     </div>
                                     <div class="content">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                                        ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                                        aliquip ex
+                                        ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                                        deserunt
                                         mollit anim id est laborum.
                                     </div>
                                 </div>
