--- a/src/helpers/css/style.css
+++ b/src/helpers/css/style.css
@@ -188,7 +188,23 @@ body {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-.lds-hourglass {
+.lds-hourglass.loading-canvas {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    transition: opacity ease-in .4s;
+    opacity: 0;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    z-index: 10;
+}
+
+.lds-hourglass.in-files-container {
     position: absolute;
     width: 64px;
     height: 64px;
@@ -205,6 +221,10 @@ body {
 
 .lds-hourglass.block {
     opacity: 1;
+}
+
+.lds-hourglass.loading-canvas:after {
+    border-color: #FFFFFF transparent #FFFFFF transparent;
 }
 
 .lds-hourglass:after {
@@ -1188,11 +1208,29 @@ span.file-name,
     left: 4px;
 }
 
+.rendering-layout {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #333333;
+    z-index: 1;
+    opacity: .4;
+    transition: opacity ease 0.3s;
+}
+
 .two-dimemsion-container {
     display: flex;
     float: left;
     width: calc(81% - 1px);
     height: calc(40% - 1px);
+}
+
+.rendering-layout.fade-out {
+    opacity: 0;
+}
+
+.rendering-layout.fade-out.hidden {
+    display: none;
 }
 
 .two-dimemsion {
